syntax = "proto3";
package proto;

import "google/api/annotations.proto";

message PingMessage {
    string greeting = 1;
}

service AuthService {
    rpc SayHello(PingMessage) returns (PingMessage) {
        // option (google.api.http) = {
        //     post: "/1/ping"
        //     body: "*"
        // };
    }
    rpc SayHellogw(PingMessage) returns (PingMessage) {
        option (google.api.http) = {
             post: "/v1/authping"
             body: "*"
        };
    }
}